style: 컬렉션 리스트변환 toList() 메소드로 변경